<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qb.xrealsys.ifafu.About.AboutActivity">

    <include layout="@layout/gadget_titlebar" />

    <RelativeLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/icon_ifafu_2"
            android:layout_width="120dp"
            android:layout_height="120dp" />

        <TextView
            android:id="@+id/aboutAppSubName"
            android:text="@string/app_sub_name"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="22sp"
            android:layout_marginTop="140dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/display_about_1"
            android:textColor="#000000"
            android:textSize="12sp"
            android:layout_marginTop="175dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/display_about_2"
            android:textColor="#000000"
            android:textSize="10sp"
            android:layout_marginTop="220dp"
            android:layout_centerHorizontal="true"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/app_signature"
            android:textColor="#000000"
            android:textSize="12sp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</LinearLayout>

