<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@null"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@drawable/shape_main_head"
            android:gravity="center_horizontal|center_vertical"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="90dp"
            android:layout_height="90dp">
            <ImageView
                android:src="@drawable/icon_main_user_head"
                android:layout_width="85dp"
                android:layout_height="85dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/default_main_s_number"
                android:id="@+id/main_user_number"
                android:gravity="center_vertical"
                android:textSize="13sp"
                android:textColor="#000000"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/default_main_s_institute"
                android:id="@+id/main_user_institute"
                android:gravity="center_vertical"
                android:textSize="13sp"
                android:textColor="#000000"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/default_main_s_enrollment"
                android:id="@+id/main_user_enrollment"
                android:gravity="center_vertical"
                android:textSize="13sp"
                android:textColor="#000000"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/default_main_s_clas"
                android:id="@+id/main_user_clas"
                android:gravity="center_vertical"
                android:textSize="13sp"
                android:textColor="#000000"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_marginStart="25dp"
        android:textColor="#000000"
        android:textSize="13sp"
        android:text="@string/default_main_idcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
</LinearLayout>