<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/shape_card_login_dialog_bg"
    android:layout_width="280dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:text="@string/display_card_login_title"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#ff0000"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/default_main_s_number"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/cardLoginAccount"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/shape_login_input" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/default_password_input"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/cardLoginPassword"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/shape_login_input"
                android:hint="@string/display_card_login_password"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/default_verify_input"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/cardLoginVerify"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:background="@drawable/shape_login_input"
                android:ems="10" />

            <ImageView
                android:id="@+id/cardLoginVerifyImage"
                android:layout_marginStart="5dp"
                android:layout_width="70dp"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:background="#77000000"
        android:layout_width="match_parent"
        android:layout_height="0.1dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cardLoginCancel"
            android:text="@string/display_dialog_cancel"
            android:background="@null"
            android:gravity="center"
            android:textColor="#4479fb"
            android:textSize="18sp"
            android:layout_width="140dp"
            android:layout_height="45dp" />

        <ImageView
            android:background="#77000000"
            android:layout_width="0.1dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/cardLoginSubmit"
            android:text="@string/display_dialog_submit"
            android:background="@null"
            android:gravity="center"
            android:textColor="#4479fb"
            android:textSize="18sp"
            android:layout_width="140dp"
            android:layout_height="45dp" />

    </LinearLayout>

</LinearLayout>