<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:background="@drawable/shape_display_course_info_dialog"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="20dp"
            android:textColor="@color/colorElectiveScoreBlue"
            android:textSize="22sp"
            android:text="@string/display_elective_course_prediction_title"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorElectiveScoreBlue"
            android:textSize="16sp"
            android:text="@string/display_elective_course_prediction_pre_title"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <include layout="@layout/gadget_elective_course_filter_item" android:id="@+id/natureFilter" />
        <include layout="@layout/gadget_elective_course_filter_item" android:id="@+id/ownerFilter" />
        <include layout="@layout/gadget_elective_course_filter_item" android:id="@+id/campusFilter" />

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_login_input"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40sp"
                android:layout_height="match_parent"
                android:background="#4c82fb"
                android:src="@drawable/icon_search" />

            <EditText
                android:id="@+id/searchInput"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="10"
                android:hint="@string/display_input_elective_course_query" />

        </LinearLayout>

        <Button
            android:id="@+id/queryBtn"
            android:text="@string/display_elective_course_prediction"
            android:textColor="#ffffff"
            android:background="@drawable/shape_blue_corner_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="280dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_round_white_stroke_btn"
        android:layout_width="35dp"
        android:layout_height="35dp">


        <ImageView
            android:id="@+id/closeBtn"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_close"
            android:layout_gravity="center_horizontal"
            android:layout_width="25dp"
            android:layout_height="25dp" />
    </RelativeLayout>

</LinearLayout>