<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context="com.qb.xrealsys.ifafu.LoginActivity">

    <LinearLayout
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/anit_login_2"
                android:layout_marginEnd="-60dp"
                android:layout_marginBottom="-20dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_width="60dp"
                android:layout_height="40dp" />
            <ImageView
                android:src="@drawable/anit_login_1"
                android:layout_marginBottom="-8dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_width="240dp"
                android:layout_height="100dp" />
            <ImageView
                android:src="@drawable/anit_login_2"
                android:layout_marginStart="-60dp"
                android:layout_marginBottom="-20dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_width="60dp"
                android:layout_height="40dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="240dp"
            android:background="@drawable/shape_loginwindow"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/interface_login_title"
                android:textColor="#ffffff"
                android:textSize="22sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:background="@drawable/shape_login_input"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:src="@drawable/icon_input_account"
                    android:layout_width="40sp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/loginAccount"
                    android:layout_width="260dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/display_input_login_account"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:background="@drawable/shape_login_input"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp">

                <ImageView
                    android:src="@drawable/icon_input_password"
                    android:layout_width="40sp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="260dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/display_input_login_password"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout
                android:gravity="center_vertical|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="320dp"
                    android:layout_height="44dp"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:background="@drawable/shape_login_button"
                    android:text="@string/interface_login_button" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorLoginBlue"
        android:gravity="center_horizontal"
        android:textSize="12sp"
        android:text="@string/app_signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
